add div conainter for inputs of pizza

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
   <body>
     <div class="container">
-      
+      <h1>Pizza Parlor</h1>
+      <div class="toppings">
+        
+      </div>
     </div>
   </body>
 </html>
