add label and input for pizza choices into container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <div class="container">
       <h1>Pizza Parlor</h1>
       <div class="toppings">
-        
+        <label for="topping">Choose Toppings:</label>
+        <input type="checkbox" id="cheese" class="topping-checkbox">
+        <label for="cheese">Cheese</label>
+        <input type="checkbox" id="pepperoni" class="topping-checkbox">
+        <label for="pepperoni">Pepperoni</label>
+        <input type="checkbox" id="artichoke" class="topping-checkbox">
+        <label for="artichoke">Artichoke</label>
+        <input type="checkbox" id="anchovy" class="topping-checkbox">
+        <label for="anchovy">Anchovy</label>
       </div>
     </div>
   </body>
