will add size class

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <input type="checkbox" id="anchovy" class="topping-checkbox">
         <label for="anchovy">Anchovy</label>
       </div>
+      <div class="size">
+        
+      </div>
     </div>
   </body>
 </html>
