add size labels and option to html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <label for="anchovy">Anchovy</label>
       </div>
       <div class="size">
-        
+        <label for="size">Choose Size:</label>
+        <select id="size">
+          <option value="small">Small</option>
+          <option value="medium">Medium</option>
+          <option value="large">Large</option>
+        </select>
       </div>
     </div>
   </body>
