add finshes to html add connection to javascript and add sumbit button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <option value="large">Large</option>
         </select>
       </div>
+      <button id="calculate">Calculate Cost</button>
+      <div id="result"></div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
