--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza Parlor</title>
+    <title>PizzaShop</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <div class="container">
-      <h1>Pizza Parlor</h1>
+      <h1>PizzaShop</h1>
       <div class="toppings">
         <label for="topping">Choose Toppings:</label>
         <input type="checkbox" id="cheese" class="topping-checkbox">
